--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html>
+п»ї<html>
 <head>
-<title>П.И.Х.М.А.Н.</TITLE>
+<title>Рџ.Р.РҐ.Рњ.Рђ.Рќ.</TITLE>
 </head>
 <body>
-<iframe src="loc/mus.html" frameborder=0 width=100% height=15%>музика</iframe>
-<iframe src="loc/0.html" frameborder=0 width=100% height=85%>сама гра</iframe>
+<iframe src="loc/mus.html" frameborder=0 width=100% height=15%>РјСѓР·РёРєР°</iframe>
+<iframe src="loc/0.html" frameborder=0 width=100% height=85%>СЃР°РјР° РіСЂР°</iframe>
 </body>
 </html>
